--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvF2+86pzZ3XkPW5MEwe/9",
+      "authorship_tag": "ABX9TyNsp/K2Ly0EZXbhlfk1NUJ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,12 @@
       "metadata": {
         "id": "eoa8zrU4xT5E"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "VnTq-hUZgfSy",
         "colab": {
@@ -368,7 +368,7 @@
         "url = 'https://raw.githubusercontent.com/VaishaliChauhanCCTB/demo2/refs/heads/main/exercise_data.csv'\n",
         "# data = pd.read_csv('/content/sample_data/Custom_Data/exercise_data.csv')\n",
         "data = pd.read_csv(url)\n",
-        "data.head()"
+        "data.head(10)"
       ]
     },
     {
@@ -3288,7 +3288,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3317,7 +3317,7 @@
           "height": 447
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3354,7 +3354,7 @@
           "height": 454
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3392,7 +3392,7 @@
           "height": 451
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
