--- a/Classification_Clustering.ipynb
+++ b/Classification_Clustering.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "8da135be",
       "metadata": {
         "id": "8da135be"
@@ -34,7 +34,7 @@
         "from sklearn.datasets import load_iris\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
         "import pandas as pd"
       ]
     },
@@ -54,7 +54,7 @@
         "outputId": "d5029cf0-b241-4f2e-ed1f-bf781cc351d4"
       },
       "id": "bef55hs8mkB1",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
         "outputId": "298b3f6e-3de5-41c9-da24-409f5532cf01"
       },
       "id": "2-KXUdjfnJh1",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "outputId": "890f88a8-e9eb-4349-d18f-d51b86d172b5"
       },
       "id": "WI4v-XBlpTLr",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,14 +183,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "1503b56d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1503b56d",
-        "outputId": "853734a6-3989-4374-a6a3-cd5dbc5f4d2d"
+        "outputId": "853734a6-3989-4374-a6a3-cd5dbc5f4d2d",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -428,7 +429,7 @@
         "outputId": "a9a3bbca-9823-4397-a957-48f4e48d3f0f"
       },
       "id": "f6pvHL-KwT9N",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,14 +446,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "id": "6a8dcc9d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6a8dcc9d",
-        "outputId": "7fb593f2-cbd3-4886-ed8c-730b2e670256"
+        "outputId": "02ecd5d3-11e1-4f9b-c05e-7d29d30e4127"
       },
       "outputs": [
         {
@@ -485,7 +486,8 @@
         "\n",
         "# Calculate the accuracy of the classifier\n",
         "accuracy = accuracy_score(y_test, y_pred)\n",
-        "print(\"Accuracy:\", accuracy)"
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Precision:\", precision_score(y_test, y_pred))"
       ]
     },
     {
@@ -506,7 +508,7 @@
         "outputId": "41834069-e905-4086-e7b0-858d6b5bd3cf"
       },
       "id": "t8N_Qkmd0Xn8",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -522,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "2c24248a",
       "metadata": {
         "colab": {
@@ -582,7 +584,7 @@
         "outputId": "4169c084-9d05-41ec-9411-02b7fdc56430"
       },
       "id": "iJMV0-e9z5_s",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
